--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   get: ^4.6.6
   firebase_core: ^2.27.1
   firebase_auth: ^4.17.9
+  lottie: ^3.1.0
 
 dev_dependencies:
   flutter_test:
